--- a/EstiloCss.css
+++ b/EstiloCss.css
@@ -1,6 +1,6 @@
 * {  margin:0px; padding:0px; }
 
-body{ background: url(fotos/infor.jpg) no-repeat center fixed; background:silver;}
+body{ background:silver;}
 
 .espacio{ width:1000px; height:35px; background:none; }
 
